added func recherche bar onproduit.php/presta

--- a/style/style_client.css
+++ b/style/style_client.css
@@ -336,6 +336,8 @@ html, body {
     justify-content: center;
     margin-bottom: 2%;
     flex: 1 0 auto;
+    margin-top: 60.5px;
+    margin-bottom: 99px;
 }
 
 
