--- a/style/style_client.css
+++ b/style/style_client.css
@@ -245,7 +245,7 @@ html, body {
     margin-left: 15%;
     background-color: var(--main-button-color);
 }
-.button-payment:hover, .validate-promo-code:hover, .button-payment-presta:hover{
+.button-payment:hover, .validate-promo-code:hover, .button-payment-presta:hover, #filter-products-button:hover {
     cursor: pointer;
     background: #15CF74;
 }
@@ -258,13 +258,25 @@ html, body {
     text-align: center;
     border-radius: 8px;
     margin-top: 40px;
-    width: 100%;
     bottom: -160px;
     position: relative;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     font-size: 16px;
     margin-left: 0.1%;
+    background-color: var(--main-icons-color);
+}
+
+#filter-products-button {
+    width: auto;
+    color: white;
+    padding: 8px;
+    border: none;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
     background-color: var(--main-icons-color);
 }
 
@@ -602,6 +614,13 @@ html, body {
     margin-right: 2%;
     margin-left: 2%;
     box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
+}
+
+#search-on-presta, #order-by-price-min, #order-by-price-max, #filter-prestas-by-category {
+    width: 210px;
+    border-radius: 8px;
+    border: none;
+    padding: 1%;
 }
 
 .img-product-thumbnail {
