--- a/style/style_client.css
+++ b/style/style_client.css
@@ -616,6 +616,11 @@ html, body {
     box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
+.produit-command-a:hover {
+    background-color: #15CF74;
+    border-radius: 50%;
+}
+
     #search-on-presta, #order-by-price-min, #order-by-price-max, #search-on-product {
     width: 210px;
     border-radius: 8px;
